--- a/style.css
+++ b/style.css
@@ -117,10 +117,28 @@ body {
 }
 
 /* Media query for screens with a maximum width of 768px (adjust as needed) */
-@media (max-width: 768px) {
+@media only screen and (max-width: 390px) and (max-height: 844px) {
   .weather h2 {
     bottom: unset; /* Remove the 'bottom' property for smaller screens */
-    top: -257px; /* Set the 'top' property to position the text at the top */
+    top: -250px; /* Set the 'top' property to position the text at the top */
+    margin-top: 0; /* Remove the 'margin-top' property to center the text vertically */
+  }
+}
+
+/* Styles for the iMac 24" (2021) */
+@media only screen and (max-width: 4096px) and (max-height: 2304px) {
+  .weather h2 {
+    bottom: unset; /* Remove the 'bottom' property for smaller screens */
+    top: -350px; /* Set the 'top' property to position the text at the top */
+    margin-top: 0; /* Remove the 'margin-top' property to center the text vertically */
+  }
+}
+
+/* Styles for the Xiaomi Mi 11i */
+@media only screen and (max-width: 1080px) and (max-height: 2400px) {
+  .weather h2 {
+    bottom: unset; /* Remove the 'bottom' property for smaller screens */
+    top: -200px; /* Set the 'top' property to position the text at the top */
     margin-top: 0; /* Remove the 'margin-top' property to center the text vertically */
   }
 }
