--- a/style.css
+++ b/style.css
@@ -80,25 +80,32 @@ body {
 
 .col{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     text-align: left;
     font-size: 18px;
 }
 
 .col img{
     width: 35px;
-    margin-right: 10px;
+    margin-right: 30px;
 }
 
 .col p{
     letter-spacing: 0.5px;
 }
 
-.humidity, .wind{
+.humidity {
     font-size: 18px;
     letter-spacing: 1px;
-    margin-top: -6px;
+    margin-top: 6px;
 }
+
+.wind {
+    font-size: 18px;
+    letter-spacing: 1px;
+    margin-top: 6px;
+}
+
 
 .weather h1 {
   font-family: 'SF Pro Display', sans-serif;
