--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 80px;
+    margin-top: 50px;
     }
 
 
@@ -119,10 +119,18 @@ body {
 .weather h2 {
     font-size: 50px;
     font-weight: 500;
+    text-shadow: 2px 2px 5px black;
     position: relative;
     bottom: 273px;
     margin-top: -30px;
 }
+
+.weather h3 {
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 2px 2px 5px black;
+}
+
 
 /* Media query for screens with a maximum width of 768px (adjust as needed) */
 @media only screen and (max-width: 390px) and (max-height: 844px) {
