--- a/style.css
+++ b/style.css
@@ -23,35 +23,41 @@ body {
 
 }
 
-.search {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+
 .search input {
+    width: 250px;
     border: 0;
     outline: 0;
     background: #ebfffc;
     color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 30px;
+    padding: 14px 10px; /* Adjusted padding to move the text to the left */
+    height: 28px;
+    border-radius: 9px;
     flex: 1;
-    margin-right: 16px;
-    font-size: 22px;
+    font-size: 12px; /* Added 'px' unit to the font-size value */
+    position: relative;
+    top: -23px;
 }
+
 .search button {
     border: 0;
     outline: 0;
-    background: #ebfffc;
+    background: #d0dfdc8a;
     border-radius: 50%;
-    width: 21px;
-    height: 22px;
+    width: 22px;
+    height: 21px;
     cursor: pointer;
+    top: 19px;
+    right: 54px;
+    position: absolute;
 }
-.search button img{
-    width: 23px;
+
+
+.search button img {
+    width: 20px;
+    top: 1px;
+    position: absolute;
+    right: 1px;
 }
 
 /*weather icons*/
@@ -121,7 +127,7 @@ body {
 .weather h2 {
     font-size: 50px;
     font-weight: 500;
-    text-shadow: 2px 2px 5px black;
+    text-shadow: 1px 1px 12px black;
     position: relative;
     bottom: 273px;
     margin-top: -30px;
@@ -130,7 +136,7 @@ body {
 .weather h3 {
     font-size: 18px;
     font-weight: bold;
-    text-shadow: 2px 2px 5px black;
+    text-shadow: 1px 1px 12px black;
 }
 
 
