--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     font-size: 14px;
     position: relative;
     top: -23px;
+    z-index: 1000;
 }
 
 .search button {
@@ -65,7 +66,7 @@ body {
 .weather-icon{
     width: 65%;
     left: 20px;
-    top: 81px;
+    top: 100px;
     position: relative;
 }
 
@@ -114,13 +115,12 @@ body {
     margin-top: 6px;
 }
 
-
 .weather h1 {
   font-family: 'SF Pro Display', sans-serif;
   font-size: 75px;
   font-weight: 500;
   position: relative;
-  bottom: -50px;
+  bottom: -68px;
 }
 
 
@@ -144,7 +144,7 @@ body {
 @media only screen and (max-width: 390px) and (max-height: 844px) {
   .weather h2 {
     bottom: unset; /* Remove the 'bottom' property for smaller screens */
-    top: -235px; /* Set the 'top' property to position the text at the top */
+    top: -262px; /* Set the 'top' property to position the text at the top */
     margin-top: 0; /* Remove the 'margin-top' property to center the text vertically */
   }
 }
@@ -160,3 +160,51 @@ body {
   border-radius: 22px;
 }
 
+
+.suggestion-list {
+    display: flex;
+    position: relative;
+    pointer-events: none;
+    z-index: 999;
+    align-items: flex-start;
+    flex-direction: column;
+    right: -15px;
+    list-style: none;
+}
+
+/* CSS */
+.dialog-box {
+    font-size: 22px;
+    display: none;
+    position: relative;
+    bottom: 411px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 338px;
+    height: 227px;
+    padding: 69px;
+    background-color: rgb(0 0 0 / 46%);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 26px;
+    z-index: 999;
+}
+
+/* Optionally, you can add some styles for the content within the dialog box */
+.dialog-box p {
+  margin: 5px 0;
+  z-index: 999;
+}
+ 
+.suggestion {
+    display: flex;
+    align-items: flex-start;
+    z-index: 999;
+}
+
+/* CSS */
+.suggestion.long-city {
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide overflowing text */
+  text-overflow: ellipsis; /* Show ellipsis (...) when text overflows */
+  font-size: 18px; /* Adjust font size for long city names */
+}
